完成app框架搭建，mvvm架构已经完成（beta）未完全测试版本
Signed-off-by: Mamh <mamhsl@163.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="action_settings">设置</string>
 
     <string name="menu_home">家居</string>
-    <string name="menu_gallery">控制台</string>
-    <string name="menu_slideshow">数据中心</string>
+    <string name="menu_console">控制台</string>
+    <string name="menu_datacenter">数据中心</string>
+
+    <string name="connection_succeed">连接WLAN成功</string>
 </resources>
